--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<html>
-  <body>
-  THIS LI SHUN RESUME
-  <span>my mpm</span>
-  </body>
- </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <span>wode</span>
+</body>
+</html>
